# goit-pyweb-hw-07

./: .env  alembic.ini  cli.py  main.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 68488e1936ef_init.py  7de9a8132743_init.py
data/: config.py
db/: quick_commands.py  tables.py
