[tool.poetry]
name = "goit-pyweb-hw-07"
version = "0.1.0"
description = ""
authors = ["Amolit <MikeKukPer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.13.1"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
